--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Restaurante</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea sit dolorum, dignissimos numquam, cumque vitae tenetur quibusdam consequuntur veritatis aut assumenda sint in dolorem optio temporibus nemo quod magnam reiciendis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur consequatur quos aperiam, pariatur provident consequuntur quae neque incidunt omnis fugiat corrupti aspernatur eveniet et reiciendis perspiciatis culpa nam! Architecto, eius?</p>
 </body>
 </html>
